Added company functionality to user service (no events)
