# userservice/core/src/main/java/thi/cnd/userservice/core/domain/CompanyService.java
@@ -1,16 +1,23 @@
 package thi.cnd.userservice.core.domain;
 
 import jakarta.annotation.Nullable;
+import jakarta.validation.constraints.NotNull;
 import lombok.AllArgsConstructor;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
+import thi.cnd.userservice.core.exception.CompanyAlreadyExistsException;
+import thi.cnd.userservice.core.exception.CompanyNotFoundByIdException;
+import thi.cnd.userservice.core.exception.UserNotFoundByIdException;
 import thi.cnd.userservice.core.model.company.Company;
 import thi.cnd.userservice.core.model.company.CompanyDetails;
 import thi.cnd.userservice.core.model.company.CompanyId;
 import thi.cnd.userservice.core.model.company.CompanyLinks;
+import thi.cnd.userservice.core.model.user.User;
 import thi.cnd.userservice.core.model.user.UserId;
 import thi.cnd.userservice.core.ports.primary.CompanyServicePort;
+import thi.cnd.userservice.core.ports.secondary.CompanyRepositoryPort;
+import thi.cnd.userservice.core.ports.secondary.UserRepositoryPort;
 
 import java.util.Set;
 import java.util.function.Consumer;
@@ -19,9 +26,12 @@ import java.util.function.Consumer;
 @AllArgsConstructor
 public class CompanyService implements CompanyServicePort {
 
+    private final CompanyRepositoryPort companyRepositoryPort;
+    private final UserRepositoryPort userRepositoryPort;
+
     @Override
-    public Company findCompanyById(CompanyId companyId) {
-        return null;
+    public Company findCompanyById(CompanyId companyId) throws CompanyNotFoundByIdException {
+        return companyRepositoryPort.findCompanyById(companyId);
     }
 
     @Override
@@ -30,22 +40,50 @@ public class CompanyService implements CompanyServicePort {
     }
 
     @Override
-    public Company registerNewCompany(UserId ownerId, CompanyDetails details, CompanyLinks links) {
-        return null;
+    public Company registerNewCompany(
+            @NotNull UserId ownerId,
+            @NotNull CompanyDetails details,
+            @NotNull CompanyLinks links
+    ) throws UserNotFoundByIdException, CompanyAlreadyExistsException {
+        User owner = userRepositoryPort.findUserById(ownerId);
+        Company newCompany = new Company(ownerId, details, links);
+        owner.addOwnershipOfCompany(newCompany.getId());
+
+        Company savedCompany = companyRepositoryPort.saveCompany(newCompany);
+        userRepositoryPort.updateOrSaveUser(owner);
+        // TODO: eventService.sendEvent(new CompanyRegisteredEvent(savedCompany.getId(), owner, savedCompany.getDetails().name()));
+        return savedCompany;
     }
 
     @Override
-    public Company updateCompanyData(CompanyId companyId, CompanyDetails updatedCompanyDetails) {
-        return null;
+    public @NotNull Company updateCompanyDetails(
+            @NotNull CompanyId companyId,
+            @NotNull CompanyDetails updatedCompanyDetails
+    ) throws CompanyNotFoundByIdException {
+        Company company = companyRepositoryPort.findCompanyById(companyId);
+        company.setDetails(updatedCompanyDetails); // TODO: Input verification?
+        return companyRepositoryPort.updateOrSaveCompany(company);
+    }
+
+    public @NotNull Company updateCompanyLinks(
+            @NotNull CompanyId companyId,
+            @NotNull CompanyLinks updatedCompanylinks
+    ) throws CompanyNotFoundByIdException {
+        Company company = companyRepositoryPort.findCompanyById(companyId);
+        company.setLinks(updatedCompanylinks); // TODO: Input verification?
+        return companyRepositoryPort.updateOrSaveCompany(company);
     }
 
     @Override
-    public boolean deleteCompanyById(CompanyId companyId) {
-        return false;
+    public void deleteCompanyById(CompanyId companyId) throws CompanyNotFoundByIdException {
+        companyRepositoryPort.deleteCompanyById(companyId);
+        // TODO: eventService.sendEvent(new CompanyDeletedEvent(companyId));
     }
 
     @Override
-    public void addMember(CompanyId id, UserId userId) {
-
+    public @NotNull Company addMember(CompanyId companyId, UserId userId) throws CompanyNotFoundByIdException {
+        Company company = companyRepositoryPort.findCompanyById(companyId);
+        company.addMember(userId);
+        return companyRepositoryPort.updateOrSaveCompany(company);
     }
 }
